--- a/springsecurity/token/src/main/resources/application.yml
+++ b/springsecurity/token/src/main/resources/application.yml
@@ -4,3 +4,12 @@ spring:
     url: jdbc:mysql://localhost:3306/securtiy?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     password: root
     username: root
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
